# szurubooru-webtools

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  license.txt  pyproject.toml  ruff.toml  setup.sh
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/services/: downloader.py  szuru_client.py  tag_logic.py
app/static/: app.js  style.css
app/templates/: base.html  import.html  tag-tools.html
szuru_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_szuru_client.py  test_tag_logic.py
